Load tasks from task collection and inserting from database

--- a/simple-todos__1/imports/ui/body.html
+++ b/simple-todos__1/imports/ui/body.html
@@ -2,8 +2,12 @@
   <div class="container">
     <header>
       <h1>Todo List</h1>
+      <!-- <form class="new-task">
+              <input type="text" name="text" placeholder="Type to add new tasks" />
+      </form>
+       -->
     </header>
-
+<!-- spacebars in meteor -->
     <ul>
       {{#each tasks}}
         {{> task}}
@@ -11,7 +15,9 @@
     </ul>
   </div>
 </body>
-
+<!--This is a template  -->
 <template name="task">
-  <li>{{text}}</li>
+  <li>{{text}}
+     <!--Adding more elements ' : ' {{createdAt}} -->
+   </li>
 </template>
