change from template.body and use template.Landing_page

--- a/simple-todos__1/client/main.html
+++ b/simple-todos__1/client/main.html
@@ -1,3 +1,10 @@
 <head>
   <title>simple-todos</title>
 </head>
+  <template name ="App_Body">
+    <div class="container">
+      {{> Template.dynamic template=main}}
+    </div>
+
+  </template>
+
